--- a/GoShopping/ItemCellView.xib
+++ b/GoShopping/ItemCellView.xib
@@ -10,38 +10,33 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ItemCellView" customModule="GoShopping" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oww-Fa-2k2">
-                        <rect key="frame" x="10" y="10" width="180" height="180"/>
+                        <rect key="frame" x="10" y="10" width="80" height="80"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
+                        <color key="highlightedColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </label>
                 </subviews>
             </view>
-            <color key="backgroundColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="Oww-Fa-2k2" secondAttribute="trailing" constant="20" id="4E3-r5-2Se"/>
-                <constraint firstItem="Oww-Fa-2k2" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="20" id="ENi-7Y-g2C"/>
-                <constraint firstItem="Oww-Fa-2k2" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="Eqj-jT-4Lp"/>
-                <constraint firstAttribute="bottom" secondItem="Oww-Fa-2k2" secondAttribute="bottom" constant="15" id="GgF-qn-lfT"/>
-                <constraint firstAttribute="bottom" secondItem="Oww-Fa-2k2" secondAttribute="bottom" constant="10" id="Hk5-jS-NcA"/>
-                <constraint firstItem="Oww-Fa-2k2" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="LNr-hb-jP8"/>
-                <constraint firstAttribute="trailing" secondItem="Oww-Fa-2k2" secondAttribute="trailing" constant="10" id="QHr-bf-huS"/>
-                <constraint firstItem="Oww-Fa-2k2" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="SfL-Qa-Ur8"/>
-                <constraint firstItem="Oww-Fa-2k2" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="tjS-uZ-1gL"/>
+                <constraint firstItem="Oww-Fa-2k2" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="Bef-nC-Jci"/>
+                <constraint firstItem="Oww-Fa-2k2" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="a5B-Ni-cpI"/>
+                <constraint firstAttribute="bottom" secondItem="Oww-Fa-2k2" secondAttribute="bottom" constant="10" id="qgU-dR-kYM"/>
+                <constraint firstAttribute="trailing" secondItem="Oww-Fa-2k2" secondAttribute="trailing" constant="10" id="tT8-I4-AIY"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="200" height="200"/>
+            <size key="customSize" width="202" height="180"/>
             <connections>
                 <outlet property="itemNameLabel" destination="Oww-Fa-2k2" id="I80-lM-MTH"/>
             </connections>
-            <point key="canvasLocation" x="246.37681159420291" y="176.11607142857142"/>
+            <point key="canvasLocation" x="-337.68115942028987" y="60.267857142857139"/>
         </collectionViewCell>
     </objects>
 </document>
